Fixed preview buttons spacing

--- a/src/components/subcomponents/GameTurn.scss
+++ b/src/components/subcomponents/GameTurn.scss
@@ -2,7 +2,7 @@
 
 .game-turn {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-evenly;
 	align-items: center;
 	flex-wrap: wrap;
 	width: 90vw;
